# Hermes

./: .env.example  .gitignore  AGENTS.md  Dockerfile  LICENSE  README.md  docker-compose.yml  pyproject.toml
.claude/: README.md
.github/workflows/: ci.yml
config/: hermes.example.toml
deploy/: hermes.service
docs/: ARCHITECTURE.md  C_TIER.md  DESIGN.md  HANDOFF.md  METHODOLOGY.md  OPERATIONS.md  REGIME_V62_PORT.md
docs/campaigns/: SHORT_SIDE_V2_CAMPAIGN.md
docs/legacy/: DESKTOP_STATUS.md
docs/mobile/: COMPETITIVE_ANALYSIS.md  IOS_ROADMAP.md  LOCAL_LEDGER.md  MAC_HANDOFF.md  PRODUCT_BLUEPRINT.md
docs/trading/: ANTIPATTERNS.md  CHART_READING_GUIDE.md  FAQ_AND_TROUBLESHOOTING.md  JOURNAL_TEMPLATE.md  LEARNING_PATH.md  QUICKSTART.md  README.md  RISK_AND_SIZING.md  SETUPS.md  The-Hermes-Playbook.md  VALIDATION_PROTOCOL.md  cheat-card.html
mobile/: capacitor.config.ts  index.html  package-lock.json  package.json  playwright.config.ts  tsconfig.json  vite.config.ts
mobile/e2e/: account-review-coverage.spec.ts  (+21 more)
tests/: conftest.py  test_a_b_features.py  test_ai_claude.py  test_ai_router.py  test_api.py  test_backup.py  test_c_tier.py  test_indicators.py  test_infra.py  test_instrument.py  test_journal.py  test_mobile_sizing_contract.py  test_no_order_paths.py  test_oplog.py  test_pnl.py  test_regime.py  test_regime_lab.py  test_risk.py  test_rs_board.py  test_scorecard.py  test_screener.py  test_sector.py  test_sizing.py  test_stress.py  test_v62.py  test_validation.py  test_weekly_review.py
web/: index.html  journal.html  manifest.webmanifest  sw.js
(+315 files in other folders)
